deployment/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-deployment
  labels:
    type: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      type: backend
  template:
    metadata:
      name: springboot-pod
      labels:
        type: backend
    spec:
      containers:
      - name: springboot-container
        image: shreyasphuke/springboot-image:v3

---
apiVersion: v1
kind: Service
metadata:
  name: springboot-service
spec:
  type: ClusterIP
  ports:
  - targetPort: 8080
    port: 8080
  selector:
    type: backend
