deployment/database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  labels:
    type: database
spec:
  replicas: 1
  selector:
    matchLabels:
      type: database
  template:
    metadata:
      name: mysql-pod
      labels:
        type: database
    spec:
      containers:
      - name: mysql-container
        image: shreyasphuke/mysql:v1
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  type: ClusterIP
  ports:
  - targetPort: 3306
    port: 3306
  selector:
    type: database
